# Obj2Blocks

./: .gitignore  CMakeLists.txt  vcpkg.json
include/: ObjGenerator.h  block_optimizer.h  json_exporter.h  material_loader.h  mesh_processor.h  obj_loader.h  types.h  voxelizer.h
src/: ObjGenerator.cpp  block_optimizer.cpp  json_exporter.cpp  main.cpp  material_loader.cpp  mesh_processor.cpp  obj_loader.cpp  voxelizer.cpp
